<resources>
    <string name="app_name">HLIN</string>

<!--Main Page-->
    <string name="action_settings">Settings</string>
    <string name="lock">Lock</string>
    <string name="receive">Receive</string>
<!--End of Main Page-->

<!--lock Page-->
    <string name="none">None</string>
    <string name="network_lock">Network Lock</string>
    <string name="geo_lock">GeoLock</string>
    <string name="password">Password</string>
    <string name="choose_lock">Choose lock:</string>
    <string name="upload_single">Upload file</string>

    <string name="password_hint">Enter password</string>
    <!--End of lock Page-->

</resources>
